Upon feedback, resized image so that we don't have a vertical scrollbar. Small screen sizes still retain old logic to avoid making text unreadible

--- a/public/stylesheets/carousel.css
+++ b/public/stylesheets/carousel.css
@@ -8,7 +8,7 @@
   
   .carousel {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 108px);
     position: relative;
     background-color: rgb(15, 0, 39);
   }
@@ -29,8 +29,8 @@
   .slide > img {
     display: block;
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: calc(100vh - 108px);
+    object-fit: fill;
     object-position: top center;
   }
   
@@ -72,6 +72,15 @@
   }
 
   @media (max-width: 1000px) {
+    .carousel {
+      height: 100vh;
+    }
+
+    .slide > img {
+      object-fit: contain;
+      height: 100%;
+    }
+
     .carousel-button {
       font-size: 3rem;
       top: 20%;
